# cpp-allocator

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  allocator.h  block_allocator.h  free_memory_manager.h  free_segments_manager.h  memory.h  memory_segment.h  memory_slab.h  types.h  utils.h
tests/: CMakeLists.txt  free_memory_manager_tests.cc  memory_destructor_tests.cc  memory_slab_tests.cc  memory_tests.cc  test_allocator.cc
